<resources>
    <string name="app_name">MenusApp</string>
    <string name="action_bar_opcion_1">Opción 1</string>
    <string name="action_bar_opcion2">Opción 2</string>
    <string name="compartir">Compartir</string>
    <string name="generar_pdp">Generar PDP</string>
    <string name="imprimir">Imprimir</string>
    <string name="enviar">Enviar</string>
    <string name="marcar_como_pegada">Marcar como pegada</string>
    <string name="siguiente">Siguiente</string>
    <string name="anterior">Anterior</string>
    <string name="introduce_tu_nombre">Introduce tu nombre :</string>
    <string name="nombre">Nombre</string>
    <string name="nombre2">Nombre</string>
    <string name="texto_username_1">Texto Username 1</string>
    <string name="to">Name</string>
    <string name="to_dirijido">To</string>
    <string name="subject">Subject</string>
    <string name="messaje">Messaje</string>
</resources>